added first few files, started menu and input interpreter

--- a/MathPlayground/MathPlayground/MathPlayground.vcxproj
+++ b/MathPlayground/MathPlayground/MathPlayground.vcxproj
@@ -11,10 +11,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClInclude Include="header.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="header.h" />
+    <ClCompile Include="functions.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7B5E9958-943E-46A1-BA41-DC380A0E4049}</ProjectGuid>
